Fix bugs and update
NOT FULL VERSION UPDATE 1.0.9

Add UserProfile and ProfileScreen -> SettingsScreen
Add PushToken To Auth And Register Func

Add TimeSpent Anime viewing
Fix long update button MyAnimeList

Time closed Alert window 5s -> 3s

Fetch requests update endpoints

--- a/src/locales/de_Ger.json
+++ b/src/locales/de_Ger.json
@@ -19,7 +19,8 @@
     "release": "Veröffentlichung",
     "mylist": "Meine Liste",
     "profile": "Profil",
-    "localizationShowcase": "Lokalisierungs-Demo"
+    "localizationShowcase": "Lokalisierungs-Demo",
+    "сommunity": "Gemeinschaft"
   },
   "anime": {
     "nonedescription": "Keine Beschreibung",
@@ -55,6 +56,7 @@
     "Sun": "So"
   },
   "profile": {
+    "settings": "Einstellungen",
     "edit": "Profil bearbeiten",
     "notification": "Benachrichtigung",
     "security": "Sicherheit",
