--- a/src/locales/ja_Jap.json
+++ b/src/locales/ja_Jap.json
@@ -19,7 +19,8 @@
     "release": "リリース",
     "mylist": "マイリスト",
     "profile": "プロフィール",
-    "localizationShowcase": "ローカライズのショーケース"
+    "localizationShowcase": "ローカライズのショーケース",
+    "сommunity": "コミュニティ"
   },
   "anime": {
     "nonedescription": "説明なし",
@@ -55,6 +56,7 @@
     "Sun": "日"
   },
   "profile": {
+    "settings": "せってい",
     "edit": "プロフィールを編集",
     "notification": "通知",
     "security": "セキュリティ",
