Fix Calendar and Add Chat system
Add

--- a/src/locales/de_Ger.json
+++ b/src/locales/de_Ger.json
@@ -115,6 +115,7 @@
   "fullName": "Vollständiger Name",
   "nickname": "Spitzname",
   "phoneNumber": "Telefonnummer",
+  "description": "Beschreibung",
   "update": "Aktualisieren",
   "notification": {
     "generalNotification": "Allgemeine Benachrichtigung",
