--- a/src/locales/fr_Fra.json
+++ b/src/locales/fr_Fra.json
@@ -115,6 +115,7 @@
   "fullName": "Nom complet",
   "nickname": "Surnom",
   "phoneNumber": "Numéro de téléphone",
+  "description": "Description",
   "update": "Mettre à jour",
   "notification": {
     "generalNotification": "Notification générale",
