Fixed bugs and Styles
Fixed Anilibria Player styles
Modal Ratings:
  Deleted Btn submit and Cancel
  Added Btn Close

User Profile deleted Anime statistics
Settings Screen hidden Security Screen

--- a/src/locales/de_Ger.json
+++ b/src/locales/de_Ger.json
@@ -28,10 +28,9 @@
     "episodes": "Episoden",
     "episode": "Episode",
     "modal": {
-      "giverating": "Bewertung abgeben",
-      "cancel": "Abbrechen",
-      "submit": "Einreichen",
-      "users": "Benutzer"
+      "rating": "Bewertungen",
+      "close": "Schließen",
+      "users": "Nutzer"
     },
     "share": "Ich empfehle dir diesen Anime "
   },
