--- a/src/locales/ru_Rus.json
+++ b/src/locales/ru_Rus.json
@@ -29,9 +29,8 @@
     "episodes": "Эпизоды",
     "episode": "Эпизод",
     "modal": {
-      "giverating": "Дать оценку",
-      "cancel": "Отмена",
-      "submit": "Отправить",
+      "rating": "Оценки",
+      "close": "Закрыть",
       "users": "пользователей"
     },
     "share": "Я рекомендую тебе аниме "
