--- a/src/locales/uk_Ukr.json
+++ b/src/locales/uk_Ukr.json
@@ -28,9 +28,8 @@
     "episodes": "Епізоди",
     "episode": "Епізод",
     "modal": {
-      "giverating": "Дати оцінку",
-      "cancel": "Скасувати",
-      "submit": "Відправити",
+      "rating": "Оцінки",
+      "close": "Закрити",
       "users": "користувачів"
     },
     "share": "Я рекомендую тобі аніме "
