--- a/src/locales/it_Ita.json
+++ b/src/locales/it_Ita.json
@@ -63,7 +63,8 @@
     "language": "Lingua",
     "helpcenter": "Centro Assistenza",
     "privacypolicy": "Politica sulla Privacy",
-    "logout": "Esci"
+    "logout": "Esci",
+    "favoriteanime": "Anime preferiti"
   },
   "privacyPolicy": {
     "section1": "1. Tipi di dati che raccogliamo",
