--- a/src/locales/uk_Ukr.json
+++ b/src/locales/uk_Ukr.json
@@ -63,7 +63,8 @@
     "language": "Мова",
     "helpcenter": "Тех. Підтримка",
     "privacypolicy": "Політика Конфіденційності",
-    "logout": "Вийти"
+    "logout": "Вийти",
+    "favoriteanime": "Улюблені аніме"
   },
   "privacyPolicy": {
     "section1": "1. Типи даних, які ми збираємо",
