Added Comments System
Added Anime screen Kodik player and Comments and MoreLikeThis

--- a/src/locales/de_Ger.json
+++ b/src/locales/de_Ger.json
@@ -27,6 +27,9 @@
     "nonedescription": "Keine Beschreibung",
     "episodes": "Episoden",
     "episode": "Episode",
+    "comments": "Kommentare",
+    "morelikethis": "Ähnliche Anime",
+    "addcomment": "Kommentar hinzufügen",
     "modal": {
       "rating": "Bewertungen",
       "close": "Schließen",
