--- a/src/locales/en_Eng.json
+++ b/src/locales/en_Eng.json
@@ -27,6 +27,9 @@
     "nonedescription": "None description",
     "episodes": "Episodes",
     "episode": "Episode",
+    "comments": "Comments",
+    "morelikethis": "More like this",
+    "addcomment": "Add comment",
     "modal": {
       "rating": "Ratings",
       "close": "Close",
