--- a/src/locales/it_Ita.json
+++ b/src/locales/it_Ita.json
@@ -27,6 +27,9 @@
     "nonedescription": "Nessuna descrizione",
     "episodes": "Episodi",
     "episode": "Episodio",
+    "comments": "Commenti",
+    "morelikethis": "Simili a questo",
+    "addcomment": "Aggiungi un commento",
     "modal": {
       "rating": "Valutazioni",
       "close": "Chiudi",
