--- a/src/locales/ru_Rus.json
+++ b/src/locales/ru_Rus.json
@@ -28,6 +28,9 @@
     "nonedescription": "Нет описания",
     "episodes": "Эпизоды",
     "episode": "Эпизод",
+    "comments": "Комментарии",
+    "morelikethis": "Похожие аниме",
+    "addcomment": "Добавить комментарий",
     "modal": {
       "rating": "Оценки",
       "close": "Закрыть",
