--- a/src/locales/uk_Ukr.json
+++ b/src/locales/uk_Ukr.json
@@ -27,6 +27,9 @@
     "nonedescription": "Немає опису",
     "episodes": "Епізоди",
     "episode": "Епізод",
+    "comments": "Коментаріїв",
+    "morelikethis": "Схожі аніме",
+    "addcomment": "Додати коментар",
     "modal": {
       "rating": "Оцінки",
       "close": "Закрити",
